# pilepoxyl

./: .gitignore  CMakeLists.txt  FIRSTRUN  README.md  runpp.cpp
commands/: entity.json  hello.json  help.json  item.json  manifest.json  obfuscator.json
config/: README.md  notifmsg.json
data/: README.md  entity_0.json  entity_1.json  help_0.json  help_1.json  item_0.json  item_1.json  item_2.json  item_3.json  item_4.json  item_5.json  manifest_0.json  manifest_1.json  manifest_2.json  manifest_3.json  obfuscator_0.json  obfuscator_1.json
doc/: README.md  entitygenquirks.txt  itemgenext.txt
generate_libs/: CMakeLists.txt  entity.cpp  file_management.cpp  file_management.h  generate_libs.h  item.cpp  make_json.cpp  make_json.h  manifest.cpp  obfuscator.cpp  uuid_generator.cpp  uuid_generator.h
generate_libs/minizip/: CMakeLists.txt
generate_libs/minizip/libs/: libz.so.1.2.12  minizip.lib
pilepoxyl/: CMakeLists.txt  firstrun.cpp  gateway.cpp  httpapi.cpp  pilepoxyl.h
resources/: README.md  model.json  obfuscator_test.json
tests/: all_in_one_test.cpp
winext/: CMakeLists.txt
winext/include/: libwebsockets.h  lws_config.h
winext/include/libwebsockets/: lws-adopt.h  lws-async-dns.h  lws-backtrace.h  lws-bb-i2c.h  lws-bb-spi.h  lws-button.h  lws-cache-ttl.h  lws-callbacks.h  lws-cgi.h  lws-client.h  lws-conmon.h  lws-context-vhost.h  lws-cose.h  lws-dbus.h  lws-diskcache.h  lws-display.h  lws-dll2.h  lws-dlo.h  lws-dsh.h  lws-esp32-spi.h  lws-eventlib-exports.h  lws-fault-injection.h  lws-freertos.h  lws-fts.h  lws-genaes.h  lws-gencrypto.h  lws-genec.h  lws-genhash.h  lws-genrsa.h  lws-gpio.h  lws-html.h  lws-http.h  lws-i2c.h  lws-ili9341-spi.h  lws-jose.h  lws-jpeg.h  lws-jrpc.h  lws-jwe.h  lws-jwk.h  lws-jws.h  (+49 more)
winext/include/openssl/: opensslv.h
winext/prebuilt/: libcrypto.lib  websockets.lib
